w4 removing login-logout routes from api-docs
