# cse341-libraryManagement/routes/index.js
@@ -2,8 +2,12 @@ const express = require("express");
 const passport = require("passport");
 const routes = express.Router();
 
-routes.get("/login", passport.authenticate("github"), (req, res) => {});
+
+routes.get("/login", passport.authenticate("github"), (req, res) => {
+    // #swagger.ignore = true
+});
 routes.get("/logout", function(req, res, next){
+    // #swagger.ignore = true
     req.logout(function(err) {
         if (err) { return next(err); }
         res.redirect('/');
