# cse341-libraryManagement/swagger-output.json
@@ -11,26 +11,6 @@
     "https"
   ],
   "paths": {
-    "/login": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/logout": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/customers/{id}/borrows": {
       "get": {
         "description": "Returns a customer with id, and details about its borrowd books",
